Fix styles.css Compile styles.css from styles.scss in CS Code by command sass '/Users/alex/Documents/Web Development/Jumping ball/JumpingBall/src/scss/styles' '/Users/alex/Documents/Web Development/Jumping ball/JumpingBall/dist/css/styles.css'

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   box-sizing: border-box;
 }
+
 body {
   background-color: #111;
   color: #fff;
@@ -13,6 +14,7 @@ body {
   perspective: 800px;
   overflow: hidden;
 }
+
 .fall {
   position: relative;
   transform-style: preserve-3d;
@@ -21,14 +23,15 @@ body {
 @keyframes fallRotate {
   to {
     transform: rotateY(360deg);
- }
+  }
 }
+
 .wall {
   position: absolute;
   width: 80px;
   height: 80px;
   transform-style: preserve-3d;
-  background-image: linear-gradient(#000 7, #000 c);
+  background-image: linear-gradient(#0007, #000c);
   animation: move 15s infinite linear;
   bottom: -210px;
 }
@@ -42,51 +45,51 @@ body {
 }
 .wall:nth-child(1) {
   animation-delay: -1.5s;
-  background-color: rgba(239, 143, 143, 1);
+  background-color: #ef8f8f;
 }
 .wall:nth-child(2) {
   animation-delay: -3s;
-  background-color: rgba(239, 201, 143, 1);
+  background-color: #efc98f;
 }
 .wall:nth-child(3) {
   animation-delay: -4.5s;
-  background-color: rgba(220, 239, 143, 1);
+  background-color: #dcef8f;
 }
 .wall:nth-child(4) {
   animation-delay: -6s;
-  background-color: rgba(163, 239, 143, 1);
+  background-color: #a3ef8f;
 }
 .wall:nth-child(5) {
   animation-delay: -7.5s;
-  background-color: rgba(143, 239, 182, 1);
+  background-color: #8fefb6;
 }
 .wall:nth-child(6) {
   animation-delay: -9s;
-  background-color: rgba(143, 239, 239, 1);
+  background-color: #8fefef;
 }
 .wall:nth-child(7) {
   animation-delay: -10.5s;
-  background-color: rgba(143, 182, 239, 1);
+  background-color: #8fb6ef;
 }
 .wall:nth-child(8) {
   animation-delay: -12s;
-  background-color: rgba(163, 143, 239, 1);
+  background-color: #a38fef;
 }
 .wall:nth-child(9) {
   animation-delay: -13.5s;
-  background-color: rgba(220, 143, 239, 1);
+  background-color: #dc8fef;
 }
 .wall:nth-child(10) {
   animation-delay: -15s;
-  background-color: rgba(239, 143, 201, 1);
+  background-color: #ef8fc9;
 }
 @keyframes move {
   from {
     bottom: -1210px;
- }
+  }
   to {
     bottom: 810px;
- }
+  }
 }
 .wall > div {
   position: absolute;
@@ -95,35 +98,35 @@ body {
 .wall .ceil {
   width: 80px;
   height: 80px;
-  background-image: linear-gradient(#fff 7, #fff 0);
+  background-image: linear-gradient(#fff7, #fff0);
   animation: wallCeil 15s infinite linear;
   animation-delay: inherit;
   overflow: hidden;
 }
 .wall .ceil::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  /* background-image: radial-gradient(#000, #000 0 50%); */
-  /* animation: shadow 15s infinite linear; */
-  /* animation-delay: inherit; */
+  background-image: radial-gradient(#000, #0000 50%);
+  animation: shadow 15s infinite linear;
+  animation-delay: inherit;
 }
 @keyframes shadow {
   0%, 48%, 53%, 100% {
     opacity: 0;
     transform: translateY(80px) scale(2);
- }
+  }
   50% {
     opacity: 0.25;
     transform: translateY(4px) scale(0.5);
- }
+  }
 }
 .wall .top {
   width: 80px;
   transform: rotateX(90deg);
   transform-origin: top;
-  background-image: linear-gradient(#000 7, #fff 7);
+  background-image: linear-gradient(#0007, #fff7);
   animation: wallHeight 15s infinite linear;
   animation-delay: inherit;
 }
@@ -132,7 +135,7 @@ body {
   width: 80px;
   transform: rotateX(-90deg);
   transform-origin: bottom;
-  background-image: linear-gradient(#fff 0, #000 c);
+  background-image: linear-gradient(#fff0, #000c);
   animation: wallHeight 15s infinite linear;
   animation-delay: inherit;
 }
@@ -141,7 +144,7 @@ body {
   height: 80px;
   transform: rotateY(-90deg);
   transform-origin: left;
-  background-image: linear-gradient(to bottom left, #fff 3, #000 c);
+  background-image: linear-gradient(to bottom left, #fff3, #000c);
   animation: wallWidth 15s infinite linear;
   animation-delay: inherit;
 }
@@ -151,34 +154,35 @@ body {
   height: 80px;
   transform: rotateY(90deg);
   transform-origin: right;
-  background-image: linear-gradient(to bottom right, #fff 3, #000 c);
+  background-image: linear-gradient(to bottom right, #fff3, #000c);
   animation: wallWidth 15s infinite linear;
   animation-delay: inherit;
 }
 @keyframes wallCeil {
   0%, 49.75%, 55%, 100% {
     transform: translateZ(20px);
- }
+  }
   50% {
     transform: translateZ(10px);
- }
+  }
 }
 @keyframes wallHeight {
   0%, 49.75%, 55%, 100% {
     height: 20px;
- }
+  }
   50% {
     height: 10px;
- }
+  }
 }
 @keyframes wallWidth {
   0%, 49.75%, 55%, 100% {
     width: 20px;
- }
+  }
   50% {
     width: 10px;
- }
+  }
 }
+
 .ballArm {
   position: absolute;
   bottom: -210px;
@@ -191,11 +195,12 @@ body {
 @keyframes armRotate {
   from {
     transform: translateX(-50%) rotate(-45deg);
- }
+  }
   to {
     transform: translateX(-50%) rotate(45deg);
- }
+  }
 }
+
 .ball {
   position: absolute;
   width: 20px;
@@ -207,13 +212,13 @@ body {
 @keyframes ballRotateZ {
   from {
     transform: rotate(45deg);
- }
+  }
   to {
     transform: rotate(-45deg);
- }
+  }
 }
 .ball::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 20px;
   height: 20px;
@@ -224,30 +229,10 @@ body {
 @keyframes ballRotateY {
   from {
     transform: rotateY(0deg);
- }
+  }
   to {
     transform: rotateY(-360deg);
- }
+  }
 }
 
-.ballShadow {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: radial-gradient(#000, rgba(5, 5, 5, 0) 10%);
-  animation: ballShadow 3 infinite ease-in; 
-  animation: shadow 15s infinite linear;
-  animation-delay: inherit;
-}
-@keyframes ballShadow {
-  0%,
-  100% {
-    transform: scale(10);
-    opacity: 0.1;
-  }
-  50% {
-    transform: scale(10);
-    opacity: 0.0;
-    animation-timing-function: ease-out;
-  }
-}
+/*# sourceMappingURL=styles.css.map */
